// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListItem can render as being highlighted 1`] = `
<div
  data-radium={true}
  onMouseEnter={[Function]}
  style={
    Object {
      "backgroundColor": "blue",
      "color": "pink",
      "cursor": "pointer",
      "padding": "6px 12px",
    }
  }
>
  List Item
</div>
`;

exports[`ListItem can render as not highlighted 1`] = `
<div
  data-radium={true}
  onMouseEnter={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(0,0,0,0)",
      "color": "initial",
      "cursor": "pointer",
      "padding": "6px 12px",
    }
  }
>
  List Item
</div>
`;
